--- a/uzukler.html
+++ b/uzukler.html
@@ -40,6 +40,8 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    /* Меню */
     .nav {
       background: white;
       padding: 12px 20px;
@@ -55,6 +57,7 @@
       gap: 30px;
       position: relative;
       z-index: 10;
+      align-items: center;
     }
 
     .nav a {
@@ -77,7 +80,7 @@
       box-shadow: 0 0 10px var(--accent);
     }
 
-    /* Бургер кнопка */
+    /* Бургер */
     .burger {
       display: none;
       cursor: pointer;
@@ -85,7 +88,7 @@
       justify-content: space-around;
       width: 30px;
       height: 25px;
-      margin-left: auto;
+      margin-left: 10px;
       transition: transform 0.3s ease;
       z-index: 20;
     }
@@ -99,7 +102,7 @@
       transform-origin: 1px;
     }
 
-    /* Анимация бургер-кнопки при активном состоянии */
+    /* Анимация бургер-кнопки */
     .burger.open div:nth-child(1) {
       transform: rotate(45deg);
     }
@@ -113,42 +116,43 @@
     /* Мобильное меню */
     @media (max-width: 600px) {
       .nav {
-        justify-content: flex-start;
-        gap: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px 20px;
       }
 
       .nav a {
-        position: absolute;
-        top: 55px;
-        left: 0;
-        right: 0;
+        position: relative;
+        display: none; /* Скрываем все пункты меню */
+        width: 100%;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border-bottom: 1px solid #ddd;
         background: white;
-        flex-direction: column;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-        border-radius: 8px;
-        padding: 10px 0;
-        z-index: 9;
-
-        opacity: 0;
-        pointer-events: none;
-        transform: translateY(-10px);
-        transition: opacity 0.3s ease, transform 0.3s ease;
+        color: var(--text-color);
+        white-space: normal;
+        opacity: 1 !important;
+        pointer-events: auto !important;
+        transform: none !important;
+        transition: none !important;
       }
 
       .nav a.show {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        padding: 10px 15px;
-        white-space: normal;
-
-        opacity: 1;
-        pointer-events: auto;
-        transform: translateY(0);
+        display: block; /* Показываем пункты меню при активации */
       }
 
       .burger {
         display: flex;
+      }
+
+      /* Текст рядом с бургером */
+      #burgerText {
+        display: inline-block;
+        font-weight: 600;
+        font-size: 16px;
+        margin-left: 10px;
+        color: var(--text-color);
+        user-select: none;
       }
     }
 
@@ -264,19 +268,28 @@
       background-color: #25D366;
       color: white;
       border: none;
-      padding: 12px 16px;
-      border-radius: 50%;
+      padding: 12px 24px;
+      border-radius: 30px;
       cursor: pointer;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      font-size: 22px;
+      font-size: 16px;
       z-index: 1000;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.3s ease;
+      gap: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      user-select: none;
     }
     #btnWhatsApp:hover {
       background-color: #1ebe57;
+    }
+
+    #btnWhatsApp svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
     }
   </style>
 </head>
@@ -295,10 +308,13 @@
     <a href="uzukler.html">Üzüklər</a>
     <a href="qolbaq.html">Qolbaqlar</a>
     <a href="boyunbag.html">Boyunbağlar</a>
-    <div class="burger" id="burgerBtn" aria-label="Toggle menu" role="button" tabindex="0">
-      <div></div>
-      <div></div>
-      <div></div>
+    <div style="display:flex; align-items:center; margin-left:auto;">
+      <div class="burger" id="burgerBtn" aria-label="Toggle menu" role="button" tabindex="0">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <span id="burgerText" style="display:none; font-weight:600; font-size:16px; margin-left:10px; user-select:none;">Kateqoriyalar</span>
     </div>
   </nav>
 
@@ -319,154 +335,167 @@
 
   <!-- Кнопка WhatsApp -->
   <a href="https://wa.me/994702920323" target="_blank" id="btnWhatsApp" title="WhatsApp" aria-label="WhatsApp">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/></svg>
+    WhatsApp
   </a>
 
-<script>
-  const CATEGORY = "Üzüklər";  // Текущая категория, поменяй на странице
-  const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
-  const whatsappNumber = "994702920323";
+  <script>
+    const CATEGORY = "Üzüklər";  // Текущая категория, поменяй на странице
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
+    const whatsappNumber = "994702920323";
 
-  document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
+    document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
 
-  fetch(SHEET_URL)
-    .then(res => res.text())
-    .then(tsv => {
-      const rows = tsv.trim().split("\n").slice(1);
-      const items = rows.map(row => {
-        const [code, videoUrl, category] = row.split("\t");
-        return {
-          productCode: code?.trim(),
-          videoUrl: videoUrl?.trim(),
-          category: category?.trim()
-        };
+    fetch(SHEET_URL)
+      .then(res => res.text())
+      .then(tsv => {
+        const rows = tsv.trim().split("\n").slice(1);
+        const items = rows.map(row => {
+          const [code, videoUrl, category] = row.split("\t");
+          return {
+            productCode: code?.trim(),
+            videoUrl: videoUrl?.trim(),
+            category: category?.trim()
+          };
+        });
+
+        const filtered = items.filter(i => i.category === CATEGORY);
+        renderItems(filtered);
       });
 
-      const filtered = items.filter(i => i.category === CATEGORY);
-      renderItems(filtered);
-    });
+    function renderItems(items) {
+      const catalog = document.getElementById('catalog');
+      catalog.innerHTML = '';
 
-  function renderItems(items) {
-    const catalog = document.getElementById('catalog');
-    catalog.innerHTML = '';
+      items.forEach(item => {
+        const wrapper = document.createElement('div');
+        wrapper.className = 'item';
 
-    items.forEach(item => {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'item';
+        const video = document.createElement('video');
+        video.setAttribute('playsinline', '');
+        video.setAttribute('muted', '');
+        video.setAttribute('loop', '');
+        video.setAttribute('autoplay', '');
+        video.setAttribute('preload', 'none');
+        video.dataset.src = item.videoUrl;
+        video.muted = true;
 
-      const video = document.createElement('video');
-      video.setAttribute('playsinline', '');
-      video.setAttribute('muted', '');
-      video.setAttribute('loop', '');
-      video.setAttribute('autoplay', '');
-      video.setAttribute('preload', 'none');
-      video.dataset.src = item.videoUrl;
-      video.muted = true;
+        video.addEventListener('click', () => {
+          document.getElementById('modalVideo').src = item.videoUrl;
+          document.getElementById('videoModal').classList.add('active');
+        });
 
-      video.addEventListener('click', () => {
-        document.getElementById('modalVideo').src = item.videoUrl;
-        document.getElementById('videoModal').classList.add('active');
+        const codeRow = document.createElement('div');
+        codeRow.className = 'code-row';
+
+        const codeText = document.createElement('span');
+        codeText.className = 'code-text';
+        codeText.textContent = `Kod: ${item.productCode}`;
+
+        const waLink = document.createElement('a');
+        waLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(`Kod ${item.productCode}`)}`;
+        waLink.target = '_blank';
+        waLink.className = 'wa-link';
+
+        const waIcon = document.createElement('img');
+        waIcon.src = 'https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg';
+        waIcon.alt = 'WhatsApp';
+        waLink.appendChild(waIcon);
+
+        codeRow.appendChild(codeText);
+        codeRow.appendChild(waLink);
+
+        const category = document.createElement('div');
+        category.className = 'category';
+        category.textContent = item.category;
+
+        wrapper.appendChild(video);
+        wrapper.appendChild(codeRow);
+        wrapper.appendChild(category);
+
+        catalog.appendChild(wrapper);
       });
 
-      const codeRow = document.createElement('div');
-      codeRow.className = 'code-row';
+      setupVideoObserver();
+    }
 
-      const codeText = document.createElement('span');
-      codeText.className = 'code-text';
-      codeText.textContent = `Kod: ${item.productCode}`;
-
-      const waLink = document.createElement('a');
-      waLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(`Kod ${item.productCode}`)}`;
-      waLink.target = '_blank';
-      waLink.className = 'wa-link';
-
-      const waIcon = document.createElement('img');
-      waIcon.src = 'https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg';
-      waIcon.alt = 'WhatsApp';
-      waLink.appendChild(waIcon);
-
-      codeRow.appendChild(codeText);
-      codeRow.appendChild(waLink);
-
-      const category = document.createElement('div');
-      category.className = 'category';
-      category.textContent = item.category;
-
-      wrapper.appendChild(video);
-      wrapper.appendChild(codeRow);
-      wrapper.appendChild(category);
-
-      catalog.appendChild(wrapper);
-    });
-
-    setupVideoObserver();
-  }
-
-  function setupVideoObserver() {
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        const video = entry.target;
-        if (entry.isIntersecting) {
-          if (!video.src) {
-            video.src = video.dataset.src;
-            video.load();
+    function setupVideoObserver() {
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          const video = entry.target;
+          if (entry.isIntersecting) {
+            if (!video.src) {
+              video.src = video.dataset.src;
+              video.load();
+            }
+            video.play().catch(() => {});
+          } else {
+            video.pause();
           }
-          video.play().catch(() => {});
-        } else {
-          video.pause();
-        }
-      });
-    }, { threshold: 0.5 });
+        });
+      }, { threshold: 0.5 });
 
-    document.querySelectorAll('video').forEach(video => observer.observe(video));
+      document.querySelectorAll('video').forEach(video => observer.observe(video));
 
-    document.addEventListener('touchstart', () => {
-      document.querySelectorAll('video').forEach(v => {
-        if (!v.paused && v.src) return;
-        v.play().catch(() => {});
-      });
-    }, { once: true });
-  }
-
-  // Бургер меню
-  const burger = document.getElementById('burgerBtn');
-  const navLinks = document.querySelectorAll('.nav a');
-
-  burger.addEventListener('click', () => {
-    burger.classList.toggle('open');
-    navLinks.forEach(link => link.classList.toggle('show'));
-  });
-
-  burger.addEventListener('keydown', e => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      burger.click();
+      document.addEventListener('touchstart', () => {
+        document.querySelectorAll('video').forEach(v => {
+          if (!v.paused && v.src) return;
+          v.play().catch(() => {});
+        });
+      }, { once: true });
     }
-  });
 
-  // Подсветка активного пункта меню
-  const currentPath = window.location.pathname.toLowerCase();
-  navLinks.forEach(link => {
-    if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
-      link.classList.add('active');
+    // Бургер меню
+    const burger = document.getElementById('burgerBtn');
+    const navLinks = document.querySelectorAll('.nav a:not(#burgerBtn):not(#burgerText)');
+
+    burger.addEventListener('click', () => {
+      burger.classList.toggle('open');
+      navLinks.forEach(link => link.classList.toggle('show'));
+    });
+
+    burger.addEventListener('keydown', e => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        burger.click();
+      }
+    });
+
+    // Подсветка активного пункта меню
+    const currentPath = window.location.pathname.toLowerCase();
+    navLinks.forEach(link => {
+      if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
+        link.classList.add('active');
+      }
+    });
+
+    // Отображение текста рядом с бургером только на мобилках
+    function checkBurgerTextVisibility() {
+      const burgerText = document.getElementById('burgerText');
+      if (window.innerWidth <= 600) {
+        burgerText.style.display = 'inline-block';
+      } else {
+        burgerText.style.display = 'none';
+      }
     }
-  });
+    checkBurgerTextVisibility();
+    window.addEventListener('resize', checkBurgerTextVisibility);
 
-  // Кнопка Наверх
-  const btnTop = document.getElementById('btnTop');
+    // Кнопка Наверх
+    const btnTop = document.getElementById('btnTop');
 
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 300) {
-      btnTop.style.display = 'block';
-    } else {
-      btnTop.style.display = 'none';
-    }
-  });
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300) {
+        btnTop.style.display = 'block';
+      } else {
+        btnTop.style.display = 'none';
+      }
+    });
 
-  btnTop.addEventListener('click', () => {
-    window.scrollTo({top: 0, behavior: 'smooth'});
-  });
-</script>
+    btnTop.addEventListener('click', () => {
+      window.scrollTo({top: 0, behavior: 'smooth'});
+    });
+  </script>
 
 </body>
 </html>
