--- a/uzukler.html
+++ b/uzukler.html
@@ -16,8 +16,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--bg);
       color: var(--text-color);
-      min-height: 100vh;
-      position: relative;
+      padding-top: 60px; /* для места под фикс меню на мобилах */
     }
     header, footer {
       text-align: center;
@@ -44,10 +43,9 @@
     /* Меню */
     .nav {
       background: white;
-      padding: 12px 20px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.1);
       border-radius: 8px;
-      margin-bottom: 30px;
+      margin: 0 auto 30px;
       font-weight: 600;
       font-size: 17px;
       user-select: none;
@@ -55,9 +53,24 @@
       display: flex;
       justify-content: center;
       gap: 30px;
-      position: relative;
-      z-index: 10;
-      align-items: center;
+
+      position: static;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 999;
+      transition: box-shadow 0.3s ease;
+    }
+
+    /* Фикс меню при скролле на мобилах */
+    .nav.fixed {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      border-radius: 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     .nav a {
@@ -65,94 +78,74 @@
       color: var(--text-color);
       padding: 8px 16px;
       border-radius: 6px;
-      white-space: nowrap;
       transition: background-color 0.3s ease, color 0.3s ease;
+      white-space: nowrap;
+      text-align: center;
+      flex-shrink: 0;
     }
-
     .nav a:hover {
       color: var(--accent);
       background-color: #f9f5d7;
     }
-
     .nav a.active {
       color: white;
       background-color: var(--accent);
       box-shadow: 0 0 10px var(--accent);
     }
 
-    /* Бургер */
-    .burger {
-      display: none;
-      cursor: pointer;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 30px;
-      height: 25px;
-      margin-left: 10px;
-      transition: transform 0.3s ease;
-      z-index: 20;
-    }
-
-    .burger div {
-      width: 30px;
-      height: 3px;
-      background: var(--text-color);
-      border-radius: 3px;
-      transition: all 0.3s ease;
-      transform-origin: 1px;
-    }
-
-    /* Анимация бургер-кнопки */
-    .burger.open div:nth-child(1) {
-      transform: rotate(45deg);
-    }
-    .burger.open div:nth-child(2) {
-      opacity: 0;
-    }
-    .burger.open div:nth-child(3) {
-      transform: rotate(-45deg);
-    }
-
-    /* Мобильное меню */
+    /* Мобильный гамбургер */
     @media (max-width: 600px) {
+      body {
+        padding-top: 100px; /* больше места под меню */
+      }
       .nav {
+        position: fixed;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        gap: 0;
+        padding: 0 10px;
+        height: 60px;
+        overflow: hidden;
+      }
+      .nav.fixed {
+        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      }
+      .nav .menu-links {
+        display: none;
         flex-direction: column;
-        align-items: flex-start;
-        padding: 10px 20px;
-      }
-
-      .nav a {
-        position: relative;
-        display: none; /* Скрываем все пункты меню */
-        width: 100%;
-        padding: 12px 20px;
-        box-sizing: border-box;
-        border-bottom: 1px solid #ddd;
         background: white;
-        color: var(--text-color);
-        white-space: normal;
-        opacity: 1 !important;
-        pointer-events: auto !important;
-        transform: none !important;
-        transition: none !important;
+        position: fixed;
+        top: 60px;
+        left: 0;
+        right: 0;
+        padding: 10px 20px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
       }
-
-      .nav a.show {
-        display: block; /* Показываем пункты меню при активации */
-      }
-
-      .burger {
+      .nav.open .menu-links {
         display: flex;
       }
-
-      /* Текст рядом с бургером */
-      #burgerText {
-        display: inline-block;
-        font-weight: 600;
-        font-size: 16px;
-        margin-left: 10px;
-        color: var(--text-color);
+      .nav a {
+        padding: 12px 20px;
+        font-size: 18px;
+        border-radius: 0;
+        border-bottom: 1px solid #eee;
+        white-space: normal;
+      }
+      .burger {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        padding: 0 16px;
+        font-size: 20px;
         user-select: none;
+      }
+      .burger svg {
+        width: 28px;
+        height: 28px;
+        fill: var(--text-color);
       }
     }
 
@@ -239,62 +232,51 @@
       display: flex;
     }
 
-    /* Кнопка Наверх */
-    #btnTop {
-      position: fixed;
-      bottom: 50px;
-      right: 20px;
-      background-color: var(--accent);
-      color: white;
-      border: none;
-      padding: 12px 16px;
-      border-radius: 50%;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      font-size: 20px;
-      display: none;
-      z-index: 1000;
-      transition: background-color 0.3s ease;
-    }
-    #btnTop:hover {
-      background-color: #b3871f;
-    }
-
-    /* Кнопка WhatsApp */
+    /* Плавающая кнопка WhatsApp */
     #btnWhatsApp {
       position: fixed;
-      bottom: 110px;
+      bottom: 90px;
       right: 20px;
       background-color: #25D366;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 30px;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      font-size: 16px;
-      z-index: 1000;
+      border-radius: 50%;
+      width: 56px;
+      height: 56px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      cursor: pointer;
+      z-index: 10000;
       text-decoration: none;
-      font-weight: 600;
-      user-select: none;
     }
-    #btnWhatsApp:hover {
-      background-color: #1ebe57;
+    #btnWhatsApp svg {
+      width: 28px;
+      height: 28px;
+      fill: white;
     }
 
-    #btnWhatsApp svg {
-      width: 24px;
-      height: 24px;
-      fill: white;
+    /* Кнопка Наверх */
+    #btnTop {
+      position: fixed;
+      bottom: 160px;
+      right: 20px;
+      background-color: var(--accent);
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      cursor: pointer;
+      z-index: 10000;
+      color: white;
+      font-size: 28px;
+      user-select: none;
     }
   </style>
 </head>
 <body>
-
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
@@ -304,17 +286,18 @@
   </header>
 
   <nav class="nav" id="navMenu">
-    <a href="index.html">Ana səhifə</a>
-    <a href="uzukler.html">Üzüklər</a>
-    <a href="qolbaq.html">Qolbaqlar</a>
-    <a href="boyunbag.html">Boyunbağlar</a>
-    <div style="display:flex; align-items:center; margin-left:auto;">
-      <div class="burger" id="burgerBtn" aria-label="Toggle menu" role="button" tabindex="0">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <span id="burgerText" style="display:none; font-weight:600; font-size:16px; margin-left:10px; user-select:none;">Kateqoriyalar</span>
+    <div class="burger" id="burger" aria-label="Toggle menu" role="button" tabindex="0" aria-expanded="false">
+      <!-- Иконка бургера -->
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+      <span id="burgerText" style="margin-left:8px; font-weight:600; font-size:16px; display:none;">Kateqoriyalar</span>
+    </div>
+    <div class="menu-links" id="menuLinks">
+      <a href="index.html">Ana səhifə</a>
+      <a href="uzukler.html">Üzüklər</a>
+      <a href="qolbaq.html">Qolbaqlar</a>
+      <a href="boyunbag.html">Boyunbağlar</a>
     </div>
   </nav>
 
@@ -330,42 +313,95 @@
     <video id="modalVideo" controls autoplay></video>
   </div>
 
-  <!-- Кнопка Наверх -->
-  <button id="btnTop" title="Yuxarı qalx">&#8679;</button>
-
-  <!-- Кнопка WhatsApp -->
-  <a href="https://wa.me/994702920323" target="_blank" id="btnWhatsApp" title="WhatsApp" aria-label="WhatsApp">
-    <a href="https://wa.me/994702920323" target="_blank" 
-   id="btnWhatsApp" 
-   title="WhatsApp" 
-   aria-label="WhatsApp"
-   style="
-     position: fixed;
-     bottom: 110px;
-     right: 20px;
-     background-color: #25D366;
-     border-radius: 50%;
-     width: 50px;
-     height: 50px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-     cursor: pointer;
-     z-index: 1000;
-     text-decoration: none;
-   ">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" 
-       fill="white" 
-       width="28" height="28" 
-       aria-hidden="true" focusable="false">
-    <path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/>
-  </svg>
-</a>
+  <!-- Плавающие кнопки -->
+  <a href="https://wa.me/994702920323" target="_blank" id="btnWhatsApp" title="WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" aria-hidden="true" focusable="false">
+      <path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/>
+    </svg>
   </a>
 
+  <button id="btnTop" title="Yuxarıya" aria-label="Scroll to top">&#8679;</button>
+
   <script>
-    const CATEGORY = "Üzüklər";  // Текущая категория, поменяй на странице
+    // Меню бургер
+    const burger = document.getElementById('burger');
+    const nav = document.getElementById('navMenu');
+    const menuLinks = document.getElementById('menuLinks');
+    const burgerText = document.getElementById('burgerText');
+
+    burger.addEventListener('click', () => {
+      nav.classList.toggle('open');
+      menuLinks.classList.toggle('open');
+
+      const expanded = burger.getAttribute('aria-expanded') === 'true' || false;
+      burger.setAttribute('aria-expanded', !expanded);
+    });
+
+    // Показ/скрытие текста рядом с бургером по ширине экрана
+    function checkBurgerTextVisibility() {
+      if (window.innerWidth <= 600) {
+        burgerText.style.display = 'inline-block';
+      } else {
+        burgerText.style.display = 'none';
+        // При расширении экрана закрываем меню
+        nav.classList.remove('open');
+        menuLinks.classList.remove('open');
+        burger.setAttribute('aria-expanded', false);
+      }
+    }
+    checkBurgerTextVisibility();
+    window.addEventListener('resize', checkBurgerTextVisibility);
+
+    // Подсветка активного пункта меню
+    const navLinks = document.querySelectorAll('.nav a');
+    const currentPath = window.location.pathname.toLowerCase();
+
+    navLinks.forEach(link => {
+      if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
+        link.classList.add('active');
+      }
+    });
+
+    // Кнопка Наверх
+    const btnTop = document.getElementById('btnTop');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300) {
+        btnTop.style.display = 'flex';
+      } else {
+        btnTop.style.display = 'none';
+      }
+    });
+    btnTop.addEventListener('click', () => {
+      window.scrollTo({top: 0, behavior: 'smooth'});
+    });
+
+    // Видео lazy loading и автоплей
+    function setupVideoObserver() {
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          const video = entry.target;
+          if (entry.isIntersecting) {
+            if (!video.src) {
+              video.src = video.dataset.src;
+              video.load();
+            }
+            video.play().catch(() => {});
+          } else {
+            video.pause();
+          }
+        });
+      }, { threshold: 0.5 });
+      document.querySelectorAll('video').forEach(video => observer.observe(video));
+      document.addEventListener('touchstart', () => {
+        document.querySelectorAll('video').forEach(v => {
+          if (!v.paused && v.src) return;
+          v.play().catch(() => {});
+        });
+      }, { once: true });
+    }
+
+    // Загрузка товаров и рендер
+    const CATEGORY = "Üzüklər";  // Текущая категория
     const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
     const whatsappNumber = "994702920323";
 
@@ -383,9 +419,9 @@
             category: category?.trim()
           };
         });
-
         const filtered = items.filter(i => i.category === CATEGORY);
         renderItems(filtered);
+        setupVideoObserver();
       });
 
     function renderItems(items) {
@@ -440,87 +476,7 @@
 
         catalog.appendChild(wrapper);
       });
-
-      setupVideoObserver();
     }
-
-    function setupVideoObserver() {
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          const video = entry.target;
-          if (entry.isIntersecting) {
-            if (!video.src) {
-              video.src = video.dataset.src;
-              video.load();
-            }
-            video.play().catch(() => {});
-          } else {
-            video.pause();
-          }
-        });
-      }, { threshold: 0.5 });
-
-      document.querySelectorAll('video').forEach(video => observer.observe(video));
-
-      document.addEventListener('touchstart', () => {
-        document.querySelectorAll('video').forEach(v => {
-          if (!v.paused && v.src) return;
-          v.play().catch(() => {});
-        });
-      }, { once: true });
-    }
-
-    // Бургер меню
-    const burger = document.getElementById('burgerBtn');
-    const navLinks = document.querySelectorAll('.nav a:not(#burgerBtn):not(#burgerText)');
-
-    burger.addEventListener('click', () => {
-      burger.classList.toggle('open');
-      navLinks.forEach(link => link.classList.toggle('show'));
-    });
-
-    burger.addEventListener('keydown', e => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        burger.click();
-      }
-    });
-
-    // Подсветка активного пункта меню
-    const currentPath = window.location.pathname.toLowerCase();
-    navLinks.forEach(link => {
-      if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
-        link.classList.add('active');
-      }
-    });
-
-    // Отображение текста рядом с бургером только на мобилках
-    function checkBurgerTextVisibility() {
-      const burgerText = document.getElementById('burgerText');
-      if (window.innerWidth <= 600) {
-        burgerText.style.display = 'inline-block';
-      } else {
-        burgerText.style.display = 'none';
-      }
-    }
-    checkBurgerTextVisibility();
-    window.addEventListener('resize', checkBurgerTextVisibility);
-
-    // Кнопка Наверх
-    const btnTop = document.getElementById('btnTop');
-
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > 300) {
-        btnTop.style.display = 'block';
-      } else {
-        btnTop.style.display = 'none';
-      }
-    });
-
-    btnTop.addEventListener('click', () => {
-      window.scrollTo({top: 0, behavior: 'smooth'});
-    });
   </script>
-
 </body>
 </html>
