--- a/uzukler.html
+++ b/uzukler.html
@@ -274,6 +274,25 @@
       font-size: 28px;
       user-select: none;
     }
+    .whatsapp-button {
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+  width: 52px;
+  height: 52px;
+  background-color: #25D366;
+  border-radius: 50%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1001;
+  transition: transform 0.2s ease;
+}
+
+.whatsapp-button:hover {
+  transform: scale(1.1);
+}
   </style>
 </head>
 <body>
@@ -313,12 +332,12 @@
     <video id="modalVideo" controls autoplay></video>
   </div>
 
-  <!-- Плавающие кнопки -->
-  <a href="https://wa.me/994702920323" target="_blank" id="btnWhatsApp" title="WhatsApp">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" aria-hidden="true" focusable="false">
-      <path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/>
-    </svg>
-  </a>
+<!-- Плавающая кнопка WhatsApp -->
+<a href="https://wa.me/994702920323" target="_blank" class="whatsapp-button" aria-label="WhatsApp">
+  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 32 32" fill="white">
+    <path d="M16 .1C7.2.1.1 7.2.1 16c0 2.8.8 5.4 2.2 7.6L.1 32l8.6-2.3c2.1 1.1 4.5 1.7 7.1 1.7 8.8 0 15.9-7.1 15.9-15.9C31.9 7.2 24.8.1 16 .1zm0 29c-2.3 0-4.4-.6-6.3-1.7l-.5-.3-5.1 1.4 1.4-5-.3-.5c-1.3-1.8-2-4-2-6.3C3.2 8.7 8.7 3.2 16 3.2c7.3 0 12.8 5.5 12.8 12.8 0 7.3-5.5 13-12.8 13zm7.1-9.5c-.4-.2-2.3-1.1-2.7-1.3s-.6-.2-.8.2-1 1.3-1.2 1.5c-.2.2-.4.3-.8.1s-1.6-.6-3.1-2c-1.1-1-1.9-2.2-2.1-2.6-.2-.4 0-.6.1-.8s.2-.4.4-.6c.1-.2.2-.4.3-.6s0-.4 0-.6c0-.2-.8-2-1.1-2.7-.3-.7-.5-.6-.8-.6h-.7c-.2 0-.6.1-.8.4-.3.3-1 1-1 2.5s1 2.9 1.2 3.1c.2.2 2 3.1 4.8 4.3.7.3 1.2.5 1.6.6.7.2 1.3.2 1.8.1.6-.1 1.8-.8 2-1.5.2-.6.2-1.2.2-1.3.1-.1-.1-.2-.5-.4z"/>
+  </svg>
+</a>
 
   <button id="btnTop" title="Yuxarıya" aria-label="Scroll to top">&#8679;</button>
 
